--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ JavaSection/testproject/.classpath
 JavaSection/testproject/.project
 
 JavaSection/testproject/.settings/org.eclipse.jdt.core.prefs
+
+java section projects/.metadata/.log
