add week 2 day 1 -2 and day 3 java section

--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,4 @@ JavaSection/testproject/.project
 
 JavaSection/testproject/.settings/org.eclipse.jdt.core.prefs
 
-java section projects/.metadata/.log
+java section projects/.metadata/.plugins/org.eclipse.egit.core/.org.eclipse.egit.core.cmp/.project
