add week 2 day 4 code

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,6 @@
-
-JavaSection/.metadata
 *.class
-JavaSection/.project
-
-JavaSection/MiniProject/.classpath
-
-JavaSection/MiniProject/.project
-
-JavaSection/MiniProject/.settings/org.eclipse.jdt.core.prefs
-
-JavaSection/testproject/.classpath
-
-JavaSection/testproject/.project
-
-JavaSection/testproject/.settings/org.eclipse.jdt.core.prefs
-
-
-java section projects/.metadata/.plugins/org.eclipse.egit.core/.org.eclipse.egit.core.cmp/.project
+.metadata
+.project
+.classpath
+.prefs
+.settings/
