--- a/SigninApplication/src/main/webapp/WEB-INF/web.xml
+++ b/SigninApplication/src/main/webapp/WEB-INF/web.xml
@@ -15,9 +15,16 @@
 		<filter-name>SigninFilter</filter-name>
 		<filter-class>SigninFilter</filter-class>
 	</filter>
+	<filter>
+		<description>
+		</description>
+		<display-name>ChangeEmailFilter</display-name>
+		<filter-name>ChangeEmailFilter</filter-name>
+		<filter-class>ChangeEmailFilter</filter-class>
+	</filter>
 	<filter-mapping>
-		<filter-name>CreateAccountFilter</filter-name>
-		<servlet-name>CreateAccount</servlet-name>
+		<filter-name>CreateAccountFilter</filter-name><servlet-name>CreateAccount</servlet-name>
+		
 		<dispatcher>REQUEST</dispatcher>
 	</filter-mapping>
 	<filter-mapping>
@@ -27,6 +34,15 @@
 	<filter-mapping>
 		<filter-name>SigninFilter</filter-name>
 		<servlet-name>Signin</servlet-name>
+		<dispatcher>REQUEST</dispatcher>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>ChangeEmailFilter</filter-name>
+		<url-pattern>/ChangeEmailFilter</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>ChangeEmailFilter</filter-name>
+		<servlet-name>ChangeEmail</servlet-name>
 		<dispatcher>REQUEST</dispatcher>
 	</filter-mapping>
 	<servlet>
@@ -43,6 +59,13 @@
 		<servlet-name>Signin</servlet-name>
 		<servlet-class>Signin</servlet-class>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>ChangeEmail</display-name>
+		<servlet-name>ChangeEmail</servlet-name>
+		<servlet-class>ChangeEmail</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>CreateAccount</servlet-name>
 		<url-pattern>/CreateAccount</url-pattern>
@@ -50,6 +73,10 @@
 	<servlet-mapping>
 		<servlet-name>Signin</servlet-name>
 		<url-pattern>/Signin</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ChangeEmail</servlet-name>
+		<url-pattern>/ChangeEmail</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
