offline bootstrap css style
2 ways to add and use offline bootstrap css style

--- a/WebSection/Angular/AngularForms/angular.json
+++ b/WebSection/Angular/AngularForms/angular.json
@@ -27,7 +27,9 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/bootstrap/css/bootstrap.min.css",
               "src/styles.css"
+
             ],
             "scripts": []
           },
